# vagrant-gitlab

./: .gitignore  README.md  Vagrantfile  docker-compose.yml  docker-stack.yml  entrypoint.sh  haproxy.cfg  init-master.sh  init-slave.sh  patroni.dockerfile  patroni.yml  playbook.yml  pyproject.toml  sentinel.conf
docker/gitlab/: gitlab.rb
docker/haproxy/: entrypoint.sh  haproxy.cfg  haproxy.cfg.ctmpl  haproxy.dockerfile
docker/patroni/: entrypoint.sh  patroni.yml
docker/redis/: entrypoint.sh  sentinel.conf
docker/traefik/: traefik.yml
group_vars/: all.yml.sample
roles/docker/tasks/: main.yml
roles/gitlab/defaults/: main.yml
roles/gitlab/files/config/patroni/: patroni.dockerfile  patroni.yml
roles/gitlab/files/config/patroni/initdb/: 01-create-tables.sql
roles/gitlab/files/config/redis/: redis.dockerfile  sentinel.conf
roles/gitlab/files/config/traefik/: traefik.yml
roles/gitlab/tasks/: main.yml  runners.yml  token.yml
roles/gitlab/templates/: docker-compose.yml.j2  docker-stack.yml.j2
roles/gitlab/templates/config/gitlab/: gitlab.rb.j2  token.rb.j2
roles/glusterfs/defaults/: main.yml
roles/glusterfs/tasks/: main.yml  volume.yml
roles/swarm/tasks/: leader.yml  main.yml  managers.yml  workers.yml
